[flake8]
exclude = .tox,.eggs,build,dist

[options]
tests_require = pytest

[aliases]
test = pytest

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    dist
    build

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --ignore=setup.py
    --ignore=ci
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests
