[metadata]
name = horseman
version = 0.3
url = http://pypi.python.org/pypi/horseman
project_urls =
    Source Code = https://github.com/HorsemanWSGI/horseman
license = BSD-3-Clause
author = Souheil Chelfouh
author_email = trollfot@gmail.com
maintainer = Souheil Chelfouh
maintainer_email = trollfot@gmail.com
description = Toolkit to build headless WSGI applications.
long_description = file: README.rst, docs/HISTORY.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: WSGI

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where=src
